--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -200,6 +200,28 @@ main li {
     }
 }
 
+@media (max-width: 910px) {
+    .upto-row{
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        margin: 0 !important;
+        > div{
+            max-width: 500px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin: 20px auto;
+            width: 95% !important;
+
+            img{
+                display: table;
+                margin: 15px auto 0;
+            }
+        }
+    }
+}
+
 @media(max-width: 620px) {
     .experience {
         flex-direction: column;
@@ -318,7 +340,7 @@ main li {
     .night-mode {
         opacity: 0.8;
     }
-    .experience {
+    .experience{
         background-color: #13181b;
         box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
         border: 1px solid rgba(255, 255, 255, 0.1);
@@ -333,5 +355,8 @@ main li {
         button div {
             background-color: white;
         }
+    }
+    hr{
+        background-color: #c6bf87;
     }
 }
