--- a/client/styles/reset.css
+++ b/client/styles/reset.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "My Custom Font";
-    src: url(../fonts/A) format("truetype");
+    src: url(../client/fonts/A) format("truetype");
 }
 
 @font-face {
