--- a/client/styles/apple.scss
+++ b/client/styles/apple.scss
@@ -16,18 +16,18 @@
         font-size: 50px;
     }
     p {
-        margin-top: 10px;
+        margin-top: 20px;
         font-size: 20px;
         font-weight: 300;
     }
     h3 {
         opacity: 0.5;
-        margin-top: 10px;
+        margin-top: 30px;
         text-align: center;
         margin-bottom: 60px;
         font-weight: 300;
     }
-    img {
+    > img {
         width: auto;
         max-width: 100%;
         max-height: 800px;
