--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -28,5 +28,14 @@
       height: 0;
       border-bottom: 1px solid #444;
       opacity: 0.3; }
+    #app .center .fav-color {
+      background-color: #736EFE;
+      margin-left: 0px;
+      border-radius: 2px;
+      height: 10px;
+      width: 20px;
+      position: relative;
+      top: 1px;
+      display: inline-block; }
 
 /*# sourceMappingURL=index.css.map */
