--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -43,5 +43,15 @@
             border-bottom: 1px solid #444;
             opacity:0.3;
         }
+		.fav-color{
+			background-color: #736EFE;
+			margin-left: 0px;
+			border-radius: 2px;
+			height: 10px;
+			width: 20px;
+			position: relative;
+			top: 1px;
+			display: inline-block;
+		}
     }
 }
