--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,7 +5,7 @@
     .center {
         width: 95%;
         max-width: 500px;
-        margin: 100px 0;
+        margin: 100px auto;
 
         a, p, li {
             font: inherit;
